<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jamesvolmert.coolcalc.CalcActivity"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="#11b27a">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="567"
                android:id="@+id/resultsText"
                android:textSize="40dp"
                android:textColor="#ffffff"
                android:layout_gravity="right"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="50dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:weightSum="4">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/seven"
                android:id="@+id/sevenBtn"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:textColor="#060505"
                android:textSize="30sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/eight"
                android:id="@+id/eightBtn"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:textColor="#060505"
                android:textSize="30sp"
                android:fontFamily="sans-serif-medium" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/nine"
                android:id="@+id/nineBtn"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:textColor="#060505"
                android:textSize="30sp"
                android:fontFamily="sans-serif-medium" />

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/divideBtn"
                android:src="@drawable/divide"
                android:layout_weight="1"
                android:contentDescription="@string/divide"
                android:background="#00ffffff" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:weightSum="4" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/four"
                android:id="@+id/fourBtn"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:textColor="#060505"
                android:textSize="30sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/five"
                android:id="@+id/fiveBtn"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:textColor="#060505"
                android:textSize="30sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/six"
                android:id="@+id/sixBtn"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:textColor="#060505"
                android:textSize="30sp" />

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/multiplyBtn"
                android:src="@drawable/multiply"
                android:layout_weight="1"
                android:contentDescription="@string/multiply"
                android:background="#00ffffff" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:weightSum="4" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/one"
                android:id="@+id/oneBtn"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:textColor="#060505"
                android:textSize="30sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/two"
                android:id="@+id/twoBtn"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:textColor="#060505"
                android:textSize="30sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/three"
                android:id="@+id/threeBtn"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:textColor="#060505"
                android:textSize="30sp" />

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/subtractBtn"
                android:src="@drawable/subtract"
                android:layout_weight="1"
                android:contentDescription="@string/subtract"
                android:background="#00ffffff" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="86dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:padding="0dp"
                    android:maxWidth="192dp"
                    android:id="@+id/clearBtn"
                    android:textSize="25sp"
                    android:background="#11b27a"
                    android:textColor="#ffffff"
                     />
            </RelativeLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/zero"
                android:id="@+id/zeroBtn"
                android:background="#00ffffff"
                android:textColor="#060505"
                android:textSize="30sp"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/addBtn"
                android:src="@drawable/add"
                android:background="#00ffffff"
                android:contentDescription="@string/add"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calcBtn"
        android:src="@drawable/equal2"
        android:background="#00ffffff"
        android:contentDescription="@string/equal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:paddingTop="128dp"
        android:paddingRight="15dp" />
</RelativeLayout>
